// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterLabel renders with secondary scheme when no "scheme" prop is provided 1`] = `
.c0:not(:focus):not(:active):not(:focus-within) {
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div>
  <span
    aria-hidden="true"
    class="CounterLabel"
    data-scheme="secondary"
  >
    1234
  </span>
  <span
    class="c0"
  >
     (
    1234
    )
  </span>
</div>
`;

exports[`CounterLabel respects the primary "scheme" prop 1`] = `
.c0:not(:focus):not(:active):not(:focus-within) {
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div>
  <span
    aria-hidden="true"
    class="CounterLabel"
    data-scheme="primary"
  >
    1234
  </span>
  <span
    class="c0"
  >
     (
    1234
    )
  </span>
</div>
`;
